Mission Board kısmına görev ekleme butonu eklendi.

--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -33,6 +33,8 @@
                 </div>
                 <div class="card-body" id="tasks-${status.id}">
                 </div>
+                        <div class="card-footer btn btn-hover btn-secondary text-start text-dark" id="taskAdd-${status.id}"><i class="bx bx-plus"></i> Görev Ekle
+                </div>
             </div>
         `);
 
