--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -96,7 +96,58 @@
         
     </div>
 </div>
+    <div class="modal fade" id="modalAdd" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalTitle">
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="formMission">
+                        <div class="mb-3">
+                            <label for="txtTitle" class="form-label">Başlık</label>
+                            <input type="text" class="form-control" id="txtTitle">
+                        </div>
+                        <div class="mb-3">
+                            <label for="txtDescription" class="form-label">Açıklama</label>
+                            <textarea class="form-control" id="txtDescription"></textarea>
+                        </div>
+                        @* <div class="mb-3">
+                        <label for="ddlFiles" class="form-label">Files</label>
+                        <select class="form-select" id="ddlFiles" ></select>
+                        </div> *@
+                        <div class="mb-3">
+                            <label for="ddlPriorities" class="form-label">Öncelik</label>
+                            <select class="form-select" id="ddlPriorities"></select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="ddlProjects" class="form-label">Görevin Ait Olduğu Proje</label>
+                            <select class="form-select" id="ddlProjects"></select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="ddlUsers" class="form-label">Kullanıcılar</label>
+                            <select class="form-select" id="ddlUsers" multiple></select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="txtEndDate" class="form-label">Görevin Bitmesi Gereken Tarihi</label>
+                            <input type="date" class="form-control" id="txtEndDate">
+                        </div>
+                        <input type="hidden" id="hiddenStatusId" value="">
 
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                        Kapat
+                    </button>
+                    <button type="button" id="btnSave" class="btn btn-primary">Kaydet</button>
+                </div>
+            </div>
+        </div>
+    </div>
 @section Scripts {
     <script>
         $(document).ready(function () {
@@ -123,17 +174,77 @@
                                 <div class="card-body" id="tasks-${status.id}">
                                 </div>
                                 <div class="card-footer text-start text-dark" id="taskAdd-${status.id}" style="background-color: #dee2e6; cursor: pointer;">
-                                    <i class="bx bx-plus"></i> Görev Ekle
+                                        <a onclick="addMission(${status.id},this)" title="Görev Ekle" class="btn btn-hover"><i class="bx bx-plus"></i> Görev Ekle</a>
                                 </div>
                             </div>
                         `);
                     });
-                    fillCarMision();
+                    fillCardMision();
                 }
             });
+                 addMission=(statusId) => {
+                    console.log(statusId);
+                    $("#hiddenStatusId").val(statusId);
+                    $("#modalAdd").modal("show");
+                    $("#deletedRow").hide();
+                    $("#formMission").trigger('reset');
+                    $("#modalTitle").text("Yeni Görev Ekleme");
+                    fillUsers();
+                    // fillFiles();
+                    fillPriorities();
+                    fillProjects();
+                
+                    $("#btnSave").text("Kaydet").off().click(() => {
+                        let statusId = $("#hiddenStatusId").val();
+
+                        let data = {
+                            mission: {
+
+                                title: $("#txtTitle").val(),
+                                description: $("#txtDescription").val(),
+                                // fileId: $("#ddlFiles").val(),
+                                priorityId: $("#ddlPriorities").val(),
+                                projectId: $("#ddlProjects").val(),
+                                statusId: statusId,
+                                endDate: $("#txtEndDate").val()
+
+                            }
+                        };
+                        let selectedUserIds = $("#ddlUsers").val();
+
+                        $.ajax({
+                            url: '/Mission/Add',
+                            type: 'POST',
+                            data: {
+                                data: data,
+                                userIds: selectedUserIds
+                            },
+                            success: function (res) {
+                                $("#modalAdd").modal("hide");
+                            let emails = res.assignees.map(user => user.email).join("<br/>");
+
+                            let newTask = `
+                                    <div class="col-sm-12">
+                                        <div class="card card-clickable" style="cursor: pointer; transition: background-color 0.3s, box-shadow 0.3s;">
+                                            <div class="card-body">
+                                                <h5 class="card-title">#${res.id} ${res.title}</h5>
+                                                <p class="card-text">${res.description}</p>
+                                                <h6 class="card-text">${emails}</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                `;
+
+                            $(`#tasks-${statusId}`).append(newTask);
+                                toastr.success("Görev Başarıyla Oluşturuldu");
+
+                            }
+                        });
+                    });
+                }
         });
 
-        function fillCarMision() {
+        function fillCardMision() {
             $.ajax({
                 url: "/Mission/GetAllCard",
                 success: (data) => {
@@ -164,6 +275,80 @@
                 }
             });
         }
+            function fillProjects() {
+                $.ajax({
+                    url: '/Project/GetAll',
+                    type: 'GET',
+                    success: (res) => {
+                        $("#ddlProjects").empty();
+
+                        for (var item of res.data) {
+                            $("#ddlProjects").append(new Option(item.name, item.id));
+                        }
+                        $("#ddlProjects").select2({
+                            dropdownParent: $('#modalAdd'),
+                            width: "100%"
+
+
+                        });
+
+                    }
+                });
+            }
+
+            function fillUsers() {
+                $.ajax({
+                    url: '/Project/FillUsers',
+                    type: 'GET',
+                    success: (res) => {
+                        $("#ddlUsers").empty();
+
+                        for (var item of res.data) {
+                            $("#ddlUsers").append(new Option(item.email, item.id));
+                        }
+                        $("#ddlUsers").select2({
+                            dropdownParent: $('#modalAdd'),
+                            width: "100%",
+                            placeholder: "Göreve Dahil olacak Kullanıcıları Seçiniz"
+
+                        });
+                    }
+                });
+            }
+
+            function fillFiles() {
+                $.ajax({
+                    url: '/TaskFile/GetAll',
+                    type: 'GET',
+                    success: (res) => {
+                        $("#ddlFiles").empty();
+
+                        for (var item of res.data) {
+                            $("#ddlFiles").append(new Option(item.name, item.id));
+                        }
+
+                    }
+                });
+            }
+
+            function fillPriorities() {
+                $.ajax({
+                    url: '/Priority/GetAll',
+                    type: 'GET',
+                    success: (res) => {
+                        $("#ddlPriorities").empty();
+
+                        for (var item of res.data) {
+                            $("#ddlPriorities").append(new Option(item.name, item.id));
+                        }
+                        $("#ddlPriorities").select2({
+                            dropdownParent: $('#modalAdd'),
+                            width: "100%"
+
+                        });
+                    }
+                });
+            }
     </script>
 }
 
