--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -204,7 +204,14 @@
                     let commentsText = "";
                     if (res.comments && res.comments.length > 0) {
                         for (var comment of res.comments) {
-                            commentsText += `<p>${comment.description || 'Yorum içeriği yok'}</p>`;
+                          commentsText += `
+                          <div class="card">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                            <p class="mb-0"><i title="${comment.user.email}" class="uil-user-circle"></i>${comment.description || 'Yorum içeriği yok'}</p>
+                           <button onclick="addCommentParent(${comment.id}, this)" class="btn btn-sm">Yanıtla</button>
+                          </div>
+                          </div>
+                          `;
                         }
                     } else {
                         commentsText = "<p>Henüz yorum yapılmamış.</p>";
@@ -257,7 +264,7 @@
                 success: function (res) {
                     let commentsText = "";
                     for (var comment of res.comments) {
-                        commentsText += `<p>${comment.description || 'Yorum içeriği yok'}</p>`;
+                        commentsText += `<p><i title="${comment.user.email}" class="uil-user-circle" > </i>: ${comment.description || 'Yorum içeriği yok'}</p>`;
                     }
                     $("#comments").html(commentsText);
                     $("#newComment").val(""); 
